--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>website</title>
-        <link rel="stylesheet" href="C:\xampp\htdocs\project\.html\github\css.css">
+        <link rel="stylesheet" href="..\css\.html\github\css.css">
         <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css">
 
     </head>
